[package]
name = "storescp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carecoders/storescp"
description = "A server accepting DICOM C-STORE"
categories = ["command-line-utilities"]
keywords = ["dicom", "store"]
readme = "README.md"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
dicom-core = "0.8.1"
dicom-ul = { version = "0.8.1", features = ["async"] }
dicom-object = "0.8.1"
dicom-encoding = "0.8.1" 
dicom-dictionary-std = "0.8.0"
dicom-transfer-syntax-registry = "0.8.1"
snafu = "0.8"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tokio = { version = "1.38.0", features = ["full"] }

